--- a/puppet.palstra.com.conf
+++ b/puppet.palstra.com.conf
@@ -3,7 +3,7 @@ server {
   server_name                puppet puppet.palstra.com cloudvps cloudvps.palstra.com xls xls.palstra.com;
 
   passenger_enabled          on;
-  passenger_set_header       X_CLIENT_S_DN $ssl_client_s_dn;
+  passenger_set_header       X_CLIENT_DN $ssl_client_s_dn;
   passenger_set_header       X_CLIENT_VERIFY $ssl_client_verify;
 
   access_log                 /var/log/nginx/puppet_access.log;
