--- a/traefik-config.yml
+++ b/traefik-config.yml
@@ -13,6 +13,7 @@ spec:
         hostPort: 80
         containerPort: 80
         port: 80
+        redirectTo: websecure
       websecure:
         hostPort: 443
         containerPort: 443
